src/test/ui/feature-gate-repr_transparent.stderr
error[E0658]: the `#[repr(transparent)]` attribute is experimental (see issue #43036)
  --> $DIR/feature-gate-repr_transparent.rs:11:1
   |
LL | #[repr(transparent)] //~ error: the `#[repr(transparent)]` attribute is experimental
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(repr_transparent)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
